Ensure words too long for one line are broken in article tags

--- a/_sass/default.scss
+++ b/_sass/default.scss
@@ -174,6 +174,7 @@ body {
   article {
     background: #EEE;
     line-height: 1.4;
+    word-wrap: break-word;
     padding: 8px 16px;
     margin: 32px auto;
     width: 80%;
